--- a/payments-service/pom.xml
+++ b/payments-service/pom.xml
@@ -12,11 +12,11 @@
 	</parent>
 
 	<groupId>pl.training</groupId>
-	<artifactId>configuration-server</artifactId>
+	<artifactId>payments-service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<name>configuration-server</name>
-	<description>configuration-server</description>
+	<name>payments-service</name>
+	<description>payments-service</description>
 
 	<properties>
 		<java.version>11</java.version>
@@ -46,8 +46,37 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-config-server</artifactId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.junit.vintage</groupId>
+					<artifactId>junit-vintage-engine</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
