--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
     <modules>
         <module>configuration-server</module>
+        <module>payments-api</module>
         <module>payments-service</module>
     </modules>
 
