--- a/payments-service/pom.xml
+++ b/payments-service/pom.xml
@@ -48,6 +48,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>pl.training</groupId>
+			<artifactId>payments-api</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
