--- a/gateway-server/pom.xml
+++ b/gateway-server/pom.xml
@@ -12,11 +12,11 @@
 	</parent>
 
 	<groupId>pl.training</groupId>
-	<artifactId>discovery-server</artifactId>
+	<artifactId>gateway-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<name>discovery-server</name>
-	<description>discovery-server</description>
+	<name>gateway-server</name>
+	<description>gateway-server</description>
 
 	<properties>
 		<java.version>11</java.version>
@@ -47,11 +47,15 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+			<artifactId>spring-cloud-starter-gateway</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
 	</dependencies>
 
