--- a/configuration-files/gateway-server.yml
+++ b/configuration-files/gateway-server.yml
@@ -1,9 +1,10 @@
 spring:
   cloud:
     gateway:
-      - id: payments
-        predicates:
-          - Path=/api/payments
-        uri: lb://PAYMENTS-SERVICE
-        filters:
-          - RewritePath=/api/(?<payments>.*), /$\{payments}
+      rourtes:
+          - id: payments
+          predicates:
+            - Path=/api/payments
+          uri: lb://PAYMENTS-SERVICE
+          filters:
+            - RewritePath=/api/(?<payments>.*), /$\{payments}
