--- a/configuration-files/gateway-server.yml
+++ b/configuration-files/gateway-server.yml
@@ -7,4 +7,4 @@ spring:
             - Path=/api/payments
           uri: lb://PAYMENTS-SERVICE
           filters:
-            - RewritePath=/api/payments/(?<payments>.*), /$\{payments}
+            - RewritePath=/api/(?<payments>.*), /$\{payments}
