--- a/configuration-files/application-development.yml
+++ b/configuration-files/application-development.yml
@@ -1,4 +1,4 @@
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8089/eureka/
+      defaultZone: http://127.0.0.1:8089/eureka/
