--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <packaging>pom</packaging>
 
     <modules>
+        <module>commons</module>
         <module>configuration-server</module>
         <module>discovery-server</module>
         <module>gateway-server</module>
