--- a/configuration-files/payments-service.yml
+++ b/configuration-files/payments-service.yml
@@ -1,2 +1,9 @@
 server:
   port: 8000
+spring:
+  cloud:
+    stream:
+      bindings:
+        output:
+          destination: payments-topic
+          content-type: application
