--- a/configuration-files/shop-service.yml
+++ b/configuration-files/shop-service.yml
@@ -6,5 +6,5 @@ spring:
       bindings:
         input:
           destination: payments-topic
-          content-type: application
+          content-type: application/json
           groups: shop
