--- a/shop-api/pom.xml
+++ b/shop-api/pom.xml
@@ -33,6 +33,11 @@
             <version>2.2.2.RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.11.3</version>
+        </dependency>
     </dependencies>
 
 </project>
