--- a/discovery-server/src/main/resources/bootstrap.yml
+++ b/discovery-server/src/main/resources/bootstrap.yml
@@ -1,5 +1,8 @@
 spring:
   application:
     name: discovery-server
+  cloud:
+    config:
+      label: day-2
   profiles:
     active: development
