--- a/payments-service/src/main/resources/bootstrap.yml
+++ b/payments-service/src/main/resources/bootstrap.yml
@@ -1,9 +1,8 @@
 spring:
   application:
     name: payments-service
+  cloud:
+    config:
+      label: day-2
   profiles:
     active: development
-#  cloud:
-#    config:
-#      uri: http://localhost:8888
-#      label: master
