--- a/configuration-files/application.yml
+++ b/configuration-files/application.yml
@@ -1,3 +1,17 @@
 spring:
   jackson:
     default-property-inclusion: non_null
+  sleuth:
+    sampler:
+      probability: 1
+  zipkin:
+    base-url: http://localhost:8090
+  boot:
+    admin:
+      client:
+        url: http://localhost:8091
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*' ## only for training purposes
