--- a/gateway-server/src/main/resources/bootstrap.yml
+++ b/gateway-server/src/main/resources/bootstrap.yml
@@ -1,5 +1,8 @@
 spring:
   application:
     name: gateway-server
+  cloud:
+    config:
+      label: day-3-part-1
   profiles:
     active: development
