--- a/shop-service/src/main/resources/bootstrap.yml
+++ b/shop-service/src/main/resources/bootstrap.yml
@@ -1,5 +1,8 @@
 spring:
   application:
     name: shop-service
+  cloud:
+    config:
+      label: day-3-part-1
   profiles:
     active: development
