--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>commons</module>
         <module>configuration-server</module>
         <module>discovery-server</module>
+        <module>admin-server</module>
         <module>gateway-server</module>
         <module>payments-api</module>
         <module>payments-service</module>
