--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,13 @@ services:
     #volumes:
     #  - /var/run/docker.sock:/var/run/docker.sock
   zipkin:
-    image: openzipkin/zipkin-ui
+    image: openzipkin/zipkin
     ports:
       - 9411:9411
+  zipkin-ui:
+    image: openzipkin/zipkin-ui
+    environment:
+      - ZIPKIN_BASE_URI=http://zipkin:9411
+    ports:
+      - 8081:80
 
