--- a/configuration-files/application.yml
+++ b/configuration-files/application.yml
@@ -9,7 +9,8 @@ spring:
   boot:
     admin:
       client:
-        url: http://localhost:8090
+        instance:
+          service-base-url: http://localhost:8090
 management:
   endpoints:
     web:
