--- a/configuration-files/application.yml
+++ b/configuration-files/application.yml
@@ -5,12 +5,11 @@ spring:
     sampler:
       probability: 1
   zipkin:
-    base-url: http://localhost:9411
+    baseUrl: http://localhost:9411
   boot:
     admin:
       client:
-        instance:
-          service-base-url: http://localhost:8090
+        url: http://localhost:8090
 management:
   endpoints:
     web:
