--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,3 +38,14 @@ services:
     environment:
       - ACTIVE_PROFILE=production
       - CONFIGURATION_SERVER_URI=http://configuration-server:8888
+  gateway-server:
+    image: training/gateway-server
+    restart: always
+    depends_on:
+      - configuration-server
+      - discovery-server
+    ports:
+      - 8080:8080
+    environment:
+      - ACTIVE_PROFILE=production
+      - CONFIGURATION_SERVER_URI=http://configuration-server:8888
