--- a/configuration-files/application-production.yml
+++ b/configuration-files/application-production.yml
@@ -2,3 +2,9 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://discovery-server:8089/eureka/
+spring:
+  cloud:
+    stream:
+      kafka:
+        binder:
+          brokers: kafka-server
