--- a/payments-service/pom.xml
+++ b/payments-service/pom.xml
@@ -26,6 +26,7 @@
 	</properties>
 
 	<build>
+		<finalName>payments-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -123,6 +124,11 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.18</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
