--- a/shop-service/pom.xml
+++ b/shop-service/pom.xml
@@ -26,6 +26,7 @@
 	</properties>
 
 	<build>
+		<finalName>shop-service</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -136,6 +137,11 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.18</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
