--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
     image: postgres:13-alpine
     environment:
       - POSTGRES_DB=payments
-      - POSTGRES_USERNAME=admin
+      - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
       - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
@@ -62,7 +62,7 @@ services:
     image: postgres:13-alpine
     environment:
       - POSTGRES_DB=shop
-      - POSTGRES_USERNAME=admin
+      - POSTGRES_USER=admin
       - POSTGRES_PASSWORD=admin
       - PGDATA=/var/lib/postgresql/data/pgdata
     volumes:
