--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,8 +33,8 @@ services:
     restart: always
     depends_on:
       - configuration-server
-    ports:
-      - 8089:8089
+    #ports:
+    #  - 8089:8089
     environment:
       - ACTIVE_PROFILE=production
       - CONFIGURATION_SERVER_URI=http://configuration-server:8888
