--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,3 +87,12 @@ services:
     environment:
       - ACTIVE_PROFILE=production
       - CONFIGURATION_SERVER_URI=http://configuration-server:8888
+  portainer:
+    image: portainer/portainer-ce
+    restart: always
+    ports:
+      - 8000:8000
+      - 9000:9000
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./data/portainer:/data
