--- a/configuration-files/application.yml
+++ b/configuration-files/application.yml
@@ -1,3 +1,8 @@
 spring:
   jackson:
     default-property-inclusion: non_null
+management:
+  endpoints:
+    web:
+      exposure:
+        include: prometheus
