--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,18 @@ services:
   zookeeper-server:
     image: wurstmeister/zookeeper
     restart: always
-    #ports:
-    #  - 2181:2181
+    ports:
+      - 2181:2181
   kafka-server:
     image: wurstmeister/kafka
     restart: always
     depends_on:
       - zookeeper-server
-    #ports:
-    #  - 9092:9092
+    ports:
+      - 9092:9092
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: kafka-server
+      KAFKA_ADVERTISED_HOST_NAME: localhost
+      #KAFKA_ADVERTISED_HOST_NAME: kafka-server
       KAFKA_ZOOKEEPER_CONNECT: zookeeper-server:2181
     #volumes:
     #  - /var/run/docker.sock:/var/run/docker.sock
