--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     ports:
       - 9092:9092
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: localhost
-      #KAFKA_ADVERTISED_HOST_NAME: kafka-server
+      #KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_ADVERTISED_HOST_NAME: kafka-server
       KAFKA_ZOOKEEPER_CONNECT: zookeeper-server:2181
     #volumes:
     #  - /var/run/docker.sock:/var/run/docker.sock
@@ -92,8 +92,16 @@ services:
     image: portainer/portainer-ce
     restart: always
     ports:
-      - 8000:8000
+      #- 8000:8000
       - 9000:9000
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./data/portainer:/data
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - 9090:9090
+    volumes:
+      - ./configuration-files/prometheus.yml:/etc/prometheus/prometheus.yml
+
+
