--- a/configuration-files/application-production.yml
+++ b/configuration-files/application-production.yml
@@ -8,3 +8,8 @@ spring:
       kafka:
         binder:
           brokers: kafka-server
+opentracing:
+  jaeger:
+    udp-sender:
+      host: jaeger
+      port: 6831
