--- a/payments-service/pom.xml
+++ b/payments-service/pom.xml
@@ -76,6 +76,11 @@
 			<version>1.6.1</version>
 		</dependency>
 		<dependency>
+			<groupId>io.opentracing.contrib</groupId>
+			<artifactId>opentracing-spring-jaeger-web-starter</artifactId>
+			<version>1.0.3</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
 		</dependency>
