--- a/payments-service/src/main/resources/bootstrap.yml
+++ b/payments-service/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     name: payments-service
   profiles:
     active: development
-#  cloud:
-#    config:
-#      uri: http://localhost:8888
-#      label: master
+  cloud:
+    config:
+      label: day-3-part-2
+
