--- a/configuration-server/src/main/resources/bootstrap.yml
+++ b/configuration-server/src/main/resources/bootstrap.yml
@@ -1,2 +1,8 @@
-encrypt:
-  key: SYMMETRICKEY
+#encrypt:
+#  key: SYMMETRICKEY
+spring:
+  cloud:
+    config:
+      server:
+        encrypt:
+          enabled: false
