--- a/configuration-files/application-development.yml
+++ b/configuration-files/application-development.yml
@@ -2,3 +2,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://127.0.0.1:8089/eureka/
+keycloak:
+  realm: cloud
+  auth-server-uri: http://localhost:8000/auth
+  resource: cloud-service
