--- a/shop-service/src/main/resources/bootstrap.yml
+++ b/shop-service/src/main/resources/bootstrap.yml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: shop-service
+  cloud:
+    config:
+      label: day-4
   profiles:
     active: development
 encrypt:
